--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.1",
     "element-ui": "^2.15.1",
+    "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
